# code_examples

./: readme.md
ann_usecase/: pyproject.toml
ann_usecase/tests/: test_ann_usecase.py
fast_is_fast_enough/: pyproject.toml
fast_is_fast_enough/tests/: test_fast_is_fast_enough.py
preprocess_why_should_i_care/: pyproject.toml
preprocess_why_should_i_care/tests/: test_preprocess_why_should_i_care.py
template_web_app/: pyproject.toml
template_web_app/tests/: test_template_web_app.py
