[tool.poetry]
name = "fast_is_fast_enough"
version = "0.1.0"
description = ""
authors = ["rbownes <rjbownes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pandas = "^1.4.3"
jax = "^0.3.15"
jaxlib = "^0.3.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
